@@ -1178,6 +1178,13 @@ function geodir_action_details_taxonomies()
                     if ($priority_location) {
                         $links[] = "<a href=''>$post_term</a>";
                     } else {
+                        /**
+                         * Filter the tag name on the details page.
+                         *
+                         * @since 1.5.6
+                         * @param object $term The tag term object.
+                         */
+                        $term = apply_filters('geodir_details_taxonomies_tag_name',$term);
                         $links[] = "<a href='" . esc_attr(get_term_link($term->term_id, $term->taxonomy)) . "'>$term->name</a>";
                     }
                     $terms[] = $term;
@@ -1209,7 +1216,15 @@ function geodir_action_details_taxonomies()
 
                 if ($post_term != ''):
                     $term = get_term_by('id', $post_term, $post_taxonomy);
+
                     if (is_object($term)) {
+                        /**
+                         * Filter the category name on the details page.
+                         *
+                         * @since 1.5.6
+                         * @param object $term The category term object.
+                         */
+                        $term = apply_filters('geodir_details_taxonomies_term_name',$term);
                         $links[] = "<a href='" . esc_attr(get_term_link($term, $post_taxonomy)) . "'>$term->name</a>";
                         $terms[] = $term;
                     }
@@ -1314,6 +1329,10 @@ function geodir_action_details_micordata()
     $external_links[] = $post->geodir_facebook;
     $external_links = array_filter($external_links);
 
+    if(!empty($external_links)){
+        $external_links = array_values($external_links);
+    }
+
     // reviews
     $comment_count = geodir_get_review_count_total($post->ID);
     $post_avgratings = geodir_get_post_rating($post->ID);
@@ -1329,10 +1348,10 @@ function geodir_action_details_micordata()
     $schema['@context'] = "http://schema.org";
     $schema['@type'] = $schema_type;
     $schema['name'] = $post->post_name;
-    $schema['description'] = $post->post_content;
+    $schema['description'] = wp_strip_all_tags( $post->post_content, true );
     $schema['telephone'] = $post->geodir_contact;
     $schema['url'] = $c_url;
-    $schema['sameAs'] = $external_links;;
+    $schema['sameAs'] = $external_links;
     $schema['image'] = $images;
     $schema['address'] = array(
         "@type" => "PostalAddress",
@@ -1369,6 +1388,7 @@ function geodir_action_details_micordata()
      * @param array $schema The array of schema data to be filtered.
      */
     $schema = apply_filters('geodir_details_schema', $schema);
+
 
     echo '<script type="application/ld+json">' . json_encode($schema) . '</script>';
 
